--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>UnderContractorApp</title>
+        <title>PHP_Angular_Bootstrap_app</title>
 
         <!-- Bootstrap -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -14,8 +14,8 @@
     </head>
     <body>
         <div class="container" ng-app="test">
-            <h1>!!!Testing page!!!</h1>
-            <!--  
+            <h1>Testing Angular&Bootstrap!</h1>
+
             <div class="row">
                 <div class="col-md-12">
                     <h1>Responsiveness test!</h1><br>
@@ -28,7 +28,7 @@
                     </div>
                     <div class="col-md-4">Kolona 3</div>
                 </div>
-            </div>-->
+            </div>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.2/angular-animate.js"></script>
