--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div class="container" ng-app="test">
-            <h1>Testing Angular&Bootstrap!</h1>
+            <h1>Testing Angular&Bootstrap work together!</h1>
 
             <div class="row">
                 <div class="col-md-12">
